# yolo_cup_uprighting

./: requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yolo_pick_demo/lib/yolo_pick_demo/: yolo_cup_uprighting  yolo_pick_moveit
install/yolo_pick_demo/share/yolo_pick_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_pick_demo/share/yolo_pick_demo/config/: T_gripper2camera.npy  moveit_py.yaml
install/yolo_pick_demo/share/yolo_pick_demo/launch/: yolo_cup_uprighting.launch.py
log/: latest_build
src/yolo_pick_demo/: package.xml  setup.cfg  setup.py
src/yolo_pick_demo/config/: moveit_py.yaml
src/yolo_pick_demo/launch/: yolo_cup_uprighting.launch.py
src/yolo_pick_demo/yolo_pick_demo/: T_gripper2camera.npy  _base_node.py  _config.py  _motion.py  _perception.py  yolo_cup_uprighting_node.py  yolo_pick_moveit_node.py
