<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_pick_demo</name>
  <version>0.0.0</version>
  <description>YOLO-based pick and place for Doosan M0609 with RealSense depth camera</description>
  <maintainer email="deeptree@todo.todo">deeptree</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>dsr_msgs2</depend>
  <depend>moveit_py</depend>
  <depend>moveit_configs_utils</depend>
  <exec_depend>dsr_moveit_config_m0609</exec_depend>

  <exec_depend>python3-pymodbus</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
